--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ body {
     text-align: center;
     margin: auto;
     margin-top: 20%;
-    color: white;
 }
 
 @keyframes Gradient {
@@ -29,10 +28,12 @@ h1 {
     font-weight: bold;
     text-transform: uppercase;
     margin-bottom: 0;
+    color: white;
 }
 
 h2 {
     text-align: center;
+    color: white;
 }
 
 h5 {
@@ -41,6 +42,7 @@ h5 {
     letter-spacing: 1px;
     font-weight: 100;
     text-align: center;
+    color: white;
 }
 
 #para {
@@ -49,6 +51,7 @@ h5 {
     font-family: "Trebuchet MS", Helvetica, sans-serif;
     font-weight: lighter;
     padding: 25px;
+    color: white;
 }
 
 ul {
@@ -58,23 +61,24 @@ ul {
 
 a:link {
     color: white;
-    text-decoration: none solid rgb(68, 68, 68);
+    text-decoration: none;
 }
 
-li {
+.media {
     list-style: none;
-    margin: 10px 30px;
+    margin: 20px;
     display: inline-block;
     font-size: 20px;
+    width: 20px;
+    height: 20px;
     padding: 20px 20px;
-    color: white;
     border: 1px solid white;
     border-radius: 50%;
     transition: .5s;
 }
 
 li:hover {
-    color: #292929;
-    border: 1px solid #292929;
+    color: black;
+    border: 1px solid black;
     transition: .5s;
 }
