--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ a:link {
     height: 20px;
     padding: 20px 20px;
     border: 1px solid white;
+    border-radius: 50%;
     transition: .5s;
 }
 
