--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     animation: Gradient 15s ease infinite;
     text-align: center;
     margin: auto;
-    margin-top: 20%;
+    margin-top: 17%;
 }
 
 @keyframes Gradient {
@@ -47,9 +47,8 @@ h5 {
 
 #para {
     text-align: center;
-    font-size: 20px;
+    font-size: 22px;
     font-family: "Trebuchet MS", Helvetica, sans-serif;
-    font-weight: lighter;
     padding: 25px;
     color: white;
 }
@@ -65,7 +64,6 @@ a:link {
 }
 
 .media {
-    list-style: none;
     margin: 20px;
     display: inline-block;
     font-size: 20px;
@@ -77,8 +75,12 @@ a:link {
     transition: .5s;
 }
 
-li:hover {
+.media:hover {
     color: black;
     border: 1px solid black;
     transition: .5s;
+}
+
+.fa {
+    color: white;
 }
