--- a/style.css
+++ b/style.css
@@ -70,9 +70,9 @@ h2 {
 .fa {
     color: white;
     text-decoration: none;
+    transition: 0.5s ease;
 }
 
 .fa:hover {
-    transition: 0.5s;
     transform: scale(2);
 }
