--- a/style.css
+++ b/style.css
@@ -1,88 +1,93 @@
 body {
-    width: 1000px;
-    background: linear-gradient(to top left, #003300 0%, #99ccff 100%);
-    background-size: 400% 400%;
-    animation: Gradient 15s ease infinite;
-    text-align: center;
-    margin: auto;
-    margin-top: 7%;
+  width: 1000px;
+  background: linear-gradient(to top left, #003300 0%, #99ccff 100%);
+  background-size: 400% 400%;
+  animation: Gradient 15s ease infinite;
+  text-align: center;
+  margin: auto;
+  margin-top: 7%;
 }
 
 @keyframes Gradient {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 50%;
-    }
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 h1 {
-    font-size: 75px;
-    letter-spacing: 10px;
-    text-align: center;
-    font-family: "Palatino Linotype", "Book Antiqua";
-    font-weight: bold;
-    text-transform: uppercase;
-    margin-bottom: 0;
-    color: white;
-    transition: 0.5s ease;
+  font-size: 75px;
+  letter-spacing: 10px;
+  text-align: center;
+  font-family: "Palatino Linotype", "Book Antiqua";
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-bottom: 0;
+  color: white;
+  transition: 0.5s ease;
 }
 
 h2 {
-    text-align: center;
-    color: white;
-    transition: 0.5s ease;
+  text-align: center;
+  color: white;
+  transition: 0.5s ease;
 }
 
 .para {
-    text-align: center;
-    font-size: 20px;
-    font-family: "Trebuchet MS", Helvetica, sans-serif;
-    padding: 25px;
-    color: white;
-    transition: 0.5s ease;
+  text-align: center;
+  font-size: 20px;
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
+  padding: 25px;
+  color: white;
+  transition: 0.5s ease;
 }
 
-h1:hover, h2:hover, .p:hover{
-    transform: scale(1.2);
+h1:hover,
+h2:hover,
+.p:hover {
+  transform: scale(1.2);
 }
 
-.p{
-    transition: 0.5s ease;
+.p {
+  transition: 0.5s ease;
 }
 
-.cv{
-    color: white;
+.cv {
+  color: #b3ff99;
 }
-.cv:hover{
-    transition: 0.5s;
-}
-
-.circle{
-    margin: 20px;
-    display: inline-block;
-    font-size: 20px;
-    width: 20px;
-    height: 20px;
-    padding: 20px 20px;
-    color: white;
-    border: 1px solid white;
-    border-radius: 50%;
-    transition: 0.5s;
-    text-decoration: none;
+.cv:hover {
+  transition: 0.5s;
 }
 
+.circle {
+  margin: 20px;
+  display: inline-block;
+  font-size: 20px;
+  width: 20px;
+  height: 20px;
+  padding: 20px 20px;
+  color: white;
+  border: 1px solid white;
+  border-radius: 50%;
+  transition: 0.5s;
+  text-decoration: none;
+}
 
 .fa {
-    color: white;
-    text-decoration: none;
-    transition: 0.5s ease;
+  color: white;
+  text-decoration: none;
+  transition: 0.5s ease;
 }
 
 .fa:hover {
-    transform: scale(2);
+  transform: scale(2);
+}
+img {
+  border-radius: 50%;
+  width: 200px;
 }
